tests/src/frontend/syntax/invalid/lvalue_binary_non_lvalue.sk
fun main(): String {
  X::y.z = 42;
  "Fail"
}
